# ef-checkins

./: .gitignore  index.html  notification.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.js
.github/workflows/: build.yml
src/: App copy.svelte  App.svelte  app.css  main.ts  notification.js  notification.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main copy.rs  main.rs
src/styles/: notification.css
