[package]
name = "ef-checkins"
version = "0.0.0"
description = "EF Checkins App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tauri = { version = "1.5.0", features = [ "macos-private-api", "system-tray", "window-all" ] }
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
